--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/utilities.css">
-    <title>Document</title>
+    <title>Kim Portfolio</title>
 </head>
 <body>
-    this is kim raya.
+    <div class="navbar">
+        <div class="container flex">
+            <h1>KR</h1>
+            <nav>
+                <ul>
+                    <li>Works</li>
+                    <li>Resume</li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </body>
 </html>
