--- a/index.html
+++ b/index.html
@@ -20,5 +20,15 @@
             </nav>
         </div>
     </div>
+    <!-- The introduction section -->
+    <section class="introduction">
+        <div class="container">
+            <h1>PC Enthusiast, Web Developer & Student</h1>
+            <h3>I design and code beautifully simple things, and I love what I do.</h3>
+            <img src="img/me-img.png" alt="">
+        </div>
+    </section>
+
+    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque ex consequatur, deserunt natus iure necessitatibus quos quasi delectus sapiente corrupti optio fuga. Sunt voluptate possimus iste ratione, reiciendis, ipsum unde aperiam beatae totam quae hic eos deserunt corrupti nesciunt assumenda.</h1>
 </body>
 </html>
