added introduction medium section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./CSS/utilities.css">
     <title>Kim Portfolio</title>
 </head>
+
 <body>
     <div class="navbar">
         <div class="container flex">
@@ -23,12 +25,28 @@
     <!-- The introduction section -->
     <section class="introduction">
         <div class="container">
-            <h1>PC Enthusiast, Web Developer & Student</h1>
-            <h3>I design and code beautifully simple things, and I love what I do.</h3>
-            <img src="img/me-img.png" alt="">
+            <div class="intro-body">
+                <h1>PC Enthusiast, Web Developer & Student</h1>
+                <h3>I design and code beautifully simple things, and I love what I do.</h3>
+                <img src="img/me-img.png" alt="">
+            </div>
+            <div class="intro-foot">
+                <img src="img/intro-section-devices.svg" alt="">
+            </div>
         </div>
     </section>
 
-    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque ex consequatur, deserunt natus iure necessitatibus quos quasi delectus sapiente corrupti optio fuga. Sunt voluptate possimus iste ratione, reiciendis, ipsum unde aperiam beatae totam quae hic eos deserunt corrupti nesciunt assumenda.</h1>
+    <section class="intro-medium">
+        <div class="container">
+            <h1>Hi, I'm Kim. Nice to meet you.</h1>
+            <p>Since beginning my journey in the world of programming, I've done multiple personal
+                projects, school works, on the job training projects, and collaborated with 
+                awesome people to create wonderful projects. I'm quite confident, naturally curious,
+                and perpetually working on improving my skills once step at a time. I'm also a PC Enthusiast, passionate
+                about all things related to technology, hardware, and software.
+            </p>
+        </div>
+    </section>
 </body>
+
 </html>
