added introduction medium section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
     </section>
-
+    <!-- Introduction medium section -->
     <section class="intro-medium">
         <div class="container">
             <h1>Hi, I'm Kim. Nice to meet you.</h1>
