added skills section card

--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
             </p>
         </div>
     </section>
+    <!-- Skills section card -->
+    <section class="skills">
+        <div class="container grid">
+            <div class="skills-front-end">
+                <h1>Frontend Developer</h1>
+                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser.</p>
+                <p>HTML, CSS, JavaScript, Bootstrap</p>
+                <p>Dev Tools:</p>
+                <ul>
+                    <li>Visual Studio Code</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                </ul>
+            </div>
+            <div class="skills-back-end">backend skills</div>
+            <div class="skills-hardware">hardware skills</div>
+        </div>
+    </section>
 </body>
 
 </html>
