added skills section card

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container">
             <h1>Hi, I'm Kim. Nice to meet you.</h1>
             <p>Since beginning my journey in the world of programming, I've done multiple personal
-                projects, school works, on the job training projects, and collaborated with 
+                projects, school works, on the job training projects, and collaborated with
                 awesome people to create wonderful projects. I'm quite confident, naturally curious,
                 and perpetually working on improving my skills once step at a time. I'm also a PC Enthusiast, passionate
                 about all things related to technology, hardware, and software.
@@ -50,19 +50,44 @@
     <!-- Skills section card -->
     <section class="skills">
         <div class="container grid">
-            <div class="skills-front-end">
-                <h1>Frontend Developer</h1>
+            <div class="skills-column">
+                <span class="skills-icon">ICON</span>
+                <h1 class="title">Frontend Developer</h1>
                 <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser.</p>
-                <p>HTML, CSS, JavaScript, Bootstrap</p>
-                <p>Dev Tools:</p>
+
+                <p class="list-title">Languages I speak:</p>
+                <p class="list-title-contents">HTML, CSS, JavaScript, Bootstrap</p>
+
+                <p class="list-title">Dev Tools:</p>
                 <ul>
                     <li>Visual Studio Code</li>
                     <li>Git</li>
                     <li>GitHub</li>
                 </ul>
             </div>
-            <div class="skills-back-end">backend skills</div>
-            <div class="skills-hardware">hardware skills</div>
+            <div class="skills-column">
+                <span class="skills-icon">ICON</span>
+                <h1 class="title">Backend Developer</h1>
+                <p>I enjoy writing code and have a passion for developing and ensuring that web applications are strong,
+                    adaptable, and protected.</p>
+
+                <p class="list-title">Languages I speak:</p>
+                <p class="list-title-contents">Java, PHP, Laravel, MySQL</p>
+
+                <p class="list-title">Dev Tools:</p>
+                <ul>
+                    <li>Visual Studio Code</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                </ul>
+            </div>
+            <div class="skills-column">
+                <span class="skills-icon">ICON</span>
+                <h1 class="title">Computer System Servicing</h1>
+                <p>I like to maintain the health and functionality of a computer system. It helps to prevent issues,
+                    improve performance,and ensure that the system is secure and reliable.
+                </p>
+            </div>
         </div>
     </section>
 </body>
