--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/utilities.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Kim Portfolio</title>
 </head>
 
@@ -37,7 +40,7 @@
     </section>
     <!-- Introduction medium section -->
     <section class="intro-medium">
-        <div class="container">
+        <div class="container flex">
             <h1>Hi, I'm Kim. Nice to meet you.</h1>
             <p>Since beginning my journey in the world of programming, I've done multiple personal
                 projects, school works, on the job training projects, and collaborated with
@@ -49,46 +52,38 @@
     </section>
     <!-- Skills section card -->
     <section class="skills">
-        <div class="container grid">
-            <div class="skills-column">
-                <span class="skills-icon">ICON</span>
-                <h1 class="title">Frontend Developer</h1>
-                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser.</p>
-
-                <p class="list-title">Languages I speak:</p>
-                <p class="list-title-contents">HTML, CSS, JavaScript, Bootstrap</p>
-
-                <p class="list-title">Dev Tools:</p>
-                <ul>
-                    <li>Visual Studio Code</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                </ul>
+        <div class="container">
+            <h1>Technology Stack</h1>
+            <div class="grid">
+                <div class="card">
+                    <img src="img/img-java.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="img/img-c-sharp.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="img/img-html.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="img/img-css.png" alt="">
+                </div>
+                <div class="card">
+                    <img src="img/img-javascript.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="img/img-boot.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="img/img-mysql.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="img/img-php.jpg" alt="">
+                </div>
+                <div class="card">
+                    <img src="img/img-laravel.jpg" alt="">
+                </div>
             </div>
-            <div class="skills-column">
-                <span class="skills-icon">ICON</span>
-                <h1 class="title">Backend Developer</h1>
-                <p>I enjoy writing code and have a passion for developing and ensuring that web applications are strong,
-                    adaptable, and protected.</p>
 
-                <p class="list-title">Languages I speak:</p>
-                <p class="list-title-contents">Java, PHP, Laravel, MySQL</p>
-
-                <p class="list-title">Dev Tools:</p>
-                <ul>
-                    <li>Visual Studio Code</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                </ul>
-            </div>
-            <div class="skills-column">
-                <span class="skills-icon">ICON</span>
-                <h1 class="title">Computer System Servicing</h1>
-                <p>I like to maintain the health and functionality of a computer system. It helps to prevent issues,
-                    improve performance,and ensure that the system is secure and reliable.
-                </p>
-            </div>
-        </div>
     </section>
 </body>
 
