--- a/index.html
+++ b/index.html
@@ -83,7 +83,37 @@
                     <img src="img/img-laravel.jpg" alt="">
                 </div>
             </div>
+        </div>
+    </section>
 
+    <!--Recent Projects sections-->
+    <section class="recent-proj">
+        <div class="container">
+            <h1>My Recent Work</h1>
+            <p>Here are a few past design projects I've worked on.</p>
+            <article class="article-wrapper">
+                <div class="rounded-lg container-project">
+                </div>
+                <div class="project-info">
+                    <div class="flex-pr">
+                        <div class="project-title text-nowrap">Project</div>
+                        <div class="project-hover">
+                            <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
+                                color="black" stroke-linejoin="round" stroke-linecap="round" viewBox="0 0 24 24"
+                                stroke-width="2" fill="none" stroke="currentColor">
+                                <line y2="12" x2="19" y1="12" x1="5"></line>
+                                <polyline points="12 5 19 12 12 19"></polyline>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="types">
+                        <span style="background-color: rgba(165, 96, 247, 0.43); color: rgb(85, 27, 177);"
+                            class="project-type">• Analytics</span>
+                        <span class="project-type">• Dashboards</span>
+                    </div>
+                </div>
+            </article>
+        </div>
     </section>
 </body>
 
