--- a/index.html
+++ b/index.html
@@ -90,29 +90,80 @@
     <section class="recent-proj">
         <div class="container">
             <h1>My Recent Work</h1>
-            <p>Here are a few past design projects I've worked on.</p>
-            <article class="article-wrapper">
-                <div class="rounded-lg container-project">
-                </div>
-                <div class="project-info">
-                    <div class="flex-pr">
-                        <div class="project-title text-nowrap">Project</div>
-                        <div class="project-hover">
-                            <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
-                                color="black" stroke-linejoin="round" stroke-linecap="round" viewBox="0 0 24 24"
-                                stroke-width="2" fill="none" stroke="currentColor">
-                                <line y2="12" x2="19" y1="12" x1="5"></line>
-                                <polyline points="12 5 19 12 12 19"></polyline>
-                            </svg>
+            <p>Here are a few past personal design projects I've worked on.</p>
+            
+            <div class="grid">
+                <article class="article-wrapper">
+                    <div class="rounded-lg container-project">
+                        <img src="img/img-starbs.jpg" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="flex-pr">
+                            <div class="project-title text-nowrap">Starbucks Clone</div>
+                            <div class="project-hover">
+                                <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
+                                    color="black" stroke-linejoin="round" stroke-linecap="round" viewBox="0 0 24 24"
+                                    stroke-width="2" fill="none" stroke="currentColor">
+                                    <line y2="12" x2="19" y1="12" x1="5"></line>
+                                    <polyline points="12 5 19 12 12 19"></polyline>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="types">
+                            <span class="project-type">• HTML</span>
+                            <span class="project-type">• CSS</span>
+                            <span class="project-type">• JavaScript</span>
                         </div>
                     </div>
-                    <div class="types">
-                        <span style="background-color: rgba(165, 96, 247, 0.43); color: rgb(85, 27, 177);"
-                            class="project-type">• Analytics</span>
-                        <span class="project-type">• Dashboards</span>
+                </article>
+
+                <article class="article-wrapper">
+                    <div class="rounded-lg container-project">
+                        <img src="img/img-boots.png" alt="">
                     </div>
-                </div>
-            </article>
+                    <div class="project-info">
+                        <div class="flex-pr">
+                            <div class="project-title text-nowrap">Learning Page</div>
+                            <div class="project-hover">
+                                <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
+                                    color="black" stroke-linejoin="round" stroke-linecap="round" viewBox="0 0 24 24"
+                                    stroke-width="2" fill="none" stroke="currentColor">
+                                    <line y2="12" x2="19" y1="12" x1="5"></line>
+                                    <polyline points="12 5 19 12 12 19"></polyline>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="types">
+                            <span class="project-type">• HTML</span>
+                            <span class="project-type">• CSS</span>
+                            <span class="project-type">• Bootstrap</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="article-wrapper">
+                    <div class="rounded-lg container-project">
+                        <img src="img/img-hosting.png" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="flex-pr">
+                            <div class="project-title text-nowrap">Hosting Page</div>
+                            <div class="project-hover">
+                                <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
+                                    color="black" stroke-linejoin="round" stroke-linecap="round" viewBox="0 0 24 24"
+                                    stroke-width="2" fill="none" stroke="currentColor">
+                                    <line y2="12" x2="19" y1="12" x1="5"></line>
+                                    <polyline points="12 5 19 12 12 19"></polyline>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="types">
+                            <span class="project-type">• HTML</span>
+                            <span class="project-type">• CSS</span>
+                        </div>
+                    </div>
+                </article>
+            </div>
         </div>
     </section>
 </body>
