--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/utilities.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Kim Portfolio</title>
 </head>
 
@@ -91,7 +88,7 @@
         <div class="container">
             <h1>My Recent Work</h1>
             <p>Here are a few past personal design projects I've worked on.</p>
-            
+
             <div class="grid">
                 <article class="article-wrapper">
                     <div class="rounded-lg container-project">
@@ -100,14 +97,16 @@
                     <div class="project-info">
                         <div class="flex-pr">
                             <div class="project-title text-nowrap">Starbucks Clone</div>
-                            <div class="project-hover">
-                                <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
-                                    color="black" stroke-linejoin="round" stroke-linecap="round" viewBox="0 0 24 24"
-                                    stroke-width="2" fill="none" stroke="currentColor">
-                                    <line y2="12" x2="19" y1="12" x1="5"></line>
-                                    <polyline points="12 5 19 12 12 19"></polyline>
-                                </svg>
-                            </div>
+                            <a href="https://kimraya.github.io/starbucks-clone.github.io/" target="_blank">
+                                <div class="project-hover">
+                                    <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em"
+                                        height="2em" color="black" stroke-linejoin="round" stroke-linecap="round"
+                                        viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+                                        <line y2="12" x2="19" y1="12" x1="5"></line>
+                                        <polyline points="12 5 19 12 12 19"></polyline>
+                                    </svg>
+                                </div>
+                            </a>
                         </div>
                         <div class="types">
                             <span class="project-type">• HTML</span>
@@ -124,14 +123,17 @@
                     <div class="project-info">
                         <div class="flex-pr">
                             <div class="project-title text-nowrap">Learning Page</div>
-                            <div class="project-hover">
-                                <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
-                                    color="black" stroke-linejoin="round" stroke-linecap="round" viewBox="0 0 24 24"
-                                    stroke-width="2" fill="none" stroke="currentColor">
-                                    <line y2="12" x2="19" y1="12" x1="5"></line>
-                                    <polyline points="12 5 19 12 12 19"></polyline>
-                                </svg>
-                            </div>
+                            <a href="https://kimraya.github.io/learning-page-bootstrap-project.github.io/"
+                                target="_blank">
+                                <div class="project-hover">
+                                    <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em"
+                                        height="2em" color="black" stroke-linejoin="round" stroke-linecap="round"
+                                        viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+                                        <line y2="12" x2="19" y1="12" x1="5"></line>
+                                        <polyline points="12 5 19 12 12 19"></polyline>
+                                    </svg>
+                                </div>
+                            </a>
                         </div>
                         <div class="types">
                             <span class="project-type">• HTML</span>
@@ -166,6 +168,29 @@
             </div>
         </div>
     </section>
+    <!-- Footer section -->
+    <footer class="footer-section">
+        <div class="container flex">
+            <div class="footer-icon">
+                <h1>KR</h1>
+            </div>
+            <div class="footer-p">
+                <h3>Living, learning, & leveling up <br> one day at a time.</h3>
+            </div>
+            <div class="footer-socials">
+                <ion-icon name="logo-github"></ion-icon>
+                <ion-icon name="logo-linkedin"></ion-icon>
+                <ion-icon name="logo-facebook"></ion-icon>
+                <ion-icon name="logo-twitter"></ion-icon>
+            </div>
+            <div class="footer-copyright">
+                <p>Handcrafted by me &copy; 2023 </p>
+            </div>
+        </div>
+    </footer>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
