--- a/index.html
+++ b/index.html
@@ -150,14 +150,17 @@
                     <div class="project-info">
                         <div class="flex-pr">
                             <div class="project-title text-nowrap">Hosting Page</div>
-                            <div class="project-hover">
-                                <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
-                                    color="black" stroke-linejoin="round" stroke-linecap="round" viewBox="0 0 24 24"
-                                    stroke-width="2" fill="none" stroke="currentColor">
-                                    <line y2="12" x2="19" y1="12" x1="5"></line>
-                                    <polyline points="12 5 19 12 12 19"></polyline>
-                                </svg>
-                            </div>
+                            <a href="https://kimraya.github.io/pure-css-html-project-hosting-page.github.io/"
+                                target="_blank">
+                                <div class="project-hover">
+                                    <svg style="color: black;" xmlns="http://www.w3.org/2000/svg" width="2em"
+                                        height="2em" color="black" stroke-linejoin="round" stroke-linecap="round"
+                                        viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+                                        <line y2="12" x2="19" y1="12" x1="5"></line>
+                                        <polyline points="12 5 19 12 12 19"></polyline>
+                                    </svg>
+                                </div>
+                            </a>
                         </div>
                         <div class="types">
                             <span class="project-type">• HTML</span>
