added changes to the footer section

--- a/index.html
+++ b/index.html
@@ -174,17 +174,17 @@
     <!-- Footer section -->
     <footer class="footer-section">
         <div class="container flex">
-            <div class="footer-icon">
+            <!-- <div class="footer-icon">
                 <h1>KR</h1>
-            </div>
+            </div> -->
             <div class="footer-p">
                 <h3>Living, learning, & leveling up <br> one day at a time.</h3>
             </div>
             <div class="footer-socials">
-                <ion-icon name="logo-github"></ion-icon>
-                <ion-icon name="logo-linkedin"></ion-icon>
-                <ion-icon name="logo-facebook"></ion-icon>
-                <ion-icon name="logo-twitter"></ion-icon>
+                <a href="https://github.com/kimraya" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/kim-raya-10462022a/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="https://www.facebook.com/kim.raya.77/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="https://twitter.com/kingsmanbell" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
             </div>
             <div class="footer-copyright">
                 <p>Handcrafted by me &copy; 2023 </p>
