added 414px responsiveness

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </section>
 
     <!--Recent Projects sections-->
-    <section class="recent-proj">
+    <section class="recent-proj" id="works">
         <div class="container">
             <h1>My Recent Work</h1>
             <p>Here are a few past personal design projects I've worked on.</p>
