added new features such as hamburger menu

--- a/index.html
+++ b/index.html
@@ -20,8 +20,27 @@
                     <li>Resume</li>
                 </ul>
             </nav>
+            <!-- Hambuger Menu -->
+            <button type="button" class="hamburger" id="menu-btn">
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle"></span>
+                <span class="hamburger-bottom"></span>
+            </button>
         </div>
     </div>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-menu hidden" id="menu">
+        <ul>
+            <li>
+                <a href="#">Works</a>
+            </li>
+            <li>
+                <a href="#">Resume</a>
+            </li>
+        </ul>
+    </div>
+
     <!-- The introduction section -->
     <section class="introduction">
         <div class="container">
@@ -182,8 +201,10 @@
             </div>
             <div class="footer-socials">
                 <a href="https://github.com/kimraya" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-                <a href="https://www.linkedin.com/in/kim-raya-10462022a/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-                <a href="https://www.facebook.com/kim.raya.77/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/kim-raya-10462022a/" target="_blank"><ion-icon
+                        name="logo-linkedin"></ion-icon></a>
+                <a href="https://www.facebook.com/kim.raya.77/" target="_blank"><ion-icon
+                        name="logo-facebook"></ion-icon></a>
                 <a href="https://twitter.com/kingsmanbell" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
             </div>
             <div class="footer-copyright">
@@ -192,6 +213,7 @@
         </div>
     </footer>
 
+    <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
